--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -12,4 +12,5 @@
         android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:text="@string/app_name"/>
-    
+
+</LinearLayout>
